tests/diagnostics/declarations/methods/duplicate_name/expect.txt
# exit: 1
input/main.lang0:6:14: error: duplicate method 'User.idValue'
      function idValue(self) -> int64 {
               ^
